--- a/src/coms/system-res/views/sysres-content.html
+++ b/src/coms/system-res/views/sysres-content.html
@@ -1,72 +1,59 @@
-<div class="res-rli">
-	<div class="res-rright">
-		<div class="res-rright-title">
-			<div class="current-res">全部</div>
-			<a class="line-img">|</a>
-			<div>动画教具库</div>
-			<a class="line-img">|</a>
-			<div>名师微课库</div>
-			<a class="line-img">|</a>
-			<div>教学案例库</div>
-			<a class="line-img">|</a>
-			<div>教学素材库</div>
-			<a class="line-img">|</a>
-			<div>多媒体教辅库</div>
-			<a class="line-img">|</a>
-			<div>理化生实验室</div>
-			<a class="line-img">|</a>
-			<div>情景英语</div>
-			<a class="line-img">|</a>
-			<div>题库</div>
+<div id="res-content-right">
+	<div class="res-header-catogry">
+		<span class="catogry-item">全部</span>
+		<span class="catogry-item">动画教具库</span>
+		<span class="catogry-item">名师微课库</span>
+		<span class="catogry-item">教学案例库</span>
+		<span class="catogry-item">教学素材库</span>
+		<span class="catogry-item">多媒体教辅库</span>
+		<span class="catogry-item">理化生实验室</span>
+		<span class="catogry-item">情景英语</span>
+		<span class="catogry-item">题库</span>
+	</div>
+	<div class="res-header-type">
+		<span class="type-title">资源类型:</span>
+		<span class="type-list type-active">全部</span>
+		<span class="type-list">动画</span>
+		<span class="type-list">视频</span>
+		<span class="type-list">音频</span>
+		<span class="type-list">图片</span>
+		<span class="type-list">网页</span>
+		<span class="type-list">课件</span>
+		<span class="type-list">教案</span>
+		<span class="type-list">文本</span>
+		<span class="type-list">试题</span>
+		<div class="message-tab">
+			<img src="assets/img/s-g.png" />
+			<a>推荐指数</a>
+			<img src="assets/img/s-c.png" />
+			<a>评分星级</a>
+			<img src="assets/img/s-g.png" />
+			<a>下载次数</a>
+			<img src="assets/img/s-g.png" />
+			<a>收藏次数</a>
+			<img src="assets/img/s-g.png" />
+			<a>浏览次数</a>
+			<img class="meg-tab1" src="assets/img/tab1.png" />
+			<img class="meg-tab2" src="assets/img/tab2.png" />
 		</div>
-		<div class="res-rright-body">
-			<div class="res-r-hide res-r-show">
-				<div class="res-r-top">
-					<p>
-						<span>资源类型:</span>
-						<a class="res-co">全部</a>
-						<a>动画</a>
-						<a>视频</a>
-						<a>音频</a>
-						<a>图片</a>
-						<a>网页</a>
-						<a>课件</a>
-						<a>教案</a>
-						<a>文本</a>
-						<a>试题</a>
-					</p>
-					<div class="message-tab">
-						<img src="assets/img/s-g.png" />
-						<a>推荐指数</a>
-						<img src="assets/img/s-c.png" />
-						<a>评分星级</a>
-						<img src="assets/img/s-g.png" />
-						<a>下载次数</a>
-						<img src="assets/img/s-g.png" />
-						<a>收藏次数</a>
-						<img src="assets/img/s-g.png" />
-						<a>浏览次数</a>
-						<img class="meg-tab1" src="assets/img/tab1.png" />
-						<img class="meg-tab2" src="assets/img/tab2.png" />
-					</div>
-				</div>
-				<div class="res-r-main">
-					<ul class="res-ul">
-						<li class="current-style">
-							<span class="span1">
+	</div>
+	<div class="res-r-main">
+		<ul class="res-ul">
+			<li class="current-style">
+				<span class="span1">
 									<input class="in-checkbox" type="checkbox">
 									<img class="check-img" src="assets/img/d.png"></span>
-							<span class="span2">
+				<span class="span2">
 									<img src="assets/img/title.jpg"></span>
-							<span class="span3">
+				<span class="span3">
 									<p class="text-title">《触摸春天》生字学习</p>
 									<p class="text-size">大小：10M</p>
 								</span>
-							<span class="span4">
+				<span class="span4">
 									<!-- <img src="assets/img/c1.png">
 									<img src="assets/img/c2.png">
 									<img src="assets/img/c3.png">--></span>
-							<span class="span5">
+				<span class="span5">
 									<p>类型:<a>动画</a></p>
 									<p>
 										<img src="assets/img/s-y.png"/>
@@ -77,22 +64,22 @@
 									</p> 
 									<p class="qu">区</p>
 								</span>
-						</li>
-						<li class="current-style">
-							<span class="span1">
+			</li>
+			<li class="current-style">
+				<span class="span1">
 									<input class="in-checkbox" type="checkbox">
 									<img class="check-img" src="assets/img/d.png"></span>
-							<span class="span2">
+				<span class="span2">
 									<img src="assets/img/title.jpg"></span>
-							<span class="span3">
+				<span class="span3">
 									<p class="text-title">《触摸春天》生字学习</p>
 									<p class="text-size">大小：10M</p>
 								</span>
-							<span class="span4">
+				<span class="span4">
 									<!-- <img src="assets/img/c1.png">
 									<img src="assets/img/c2.png">
 									<img src="assets/img/c3.png">--></span>
-							<span class="span5">
+				<span class="span5">
 									<p>类型:<a>动画</a></p>
 									<p>
 										<img src="assets/img/s-y.png"/>
@@ -103,22 +90,22 @@
 									</p> 
 									<p>于2015/12/14共享到校</p>
 								</span>
-						</li>
-						<li class="current-style">
-							<span class="span1">
+			</li>
+			<li class="current-style">
+				<span class="span1">
 									<input class="in-checkbox" type="checkbox">
 									<img class="check-img" src="assets/img/d.png"></span>
-							<span class="span2">
+				<span class="span2">
 									<img src="assets/img/title.jpg"></span>
-							<span class="span3">
+				<span class="span3">
 									<p class="text-title">《触摸春天》生字学习</p>
 									<p class="text-size">大小：10M</p>
 								</span>
-							<span class="span4">
+				<span class="span4">
 									<!-- <img src="assets/img/c1.png">
 									<img src="assets/img/c2.png">
 									<img src="assets/img/c3.png">--></span>
-							<span class="span5">
+				<span class="span5">
 									<p>类型:<a>动画</a></p>
 									<p>
 										<img src="assets/img/s-y.png"/>
@@ -129,22 +116,22 @@
 									</p> 
 									<p>于2015/12/14共享到校</p>
 								</span>
-						</li>
-						<li class="current-style">
-							<span class="span1">
+			</li>
+			<li class="current-style">
+				<span class="span1">
 									<input class="in-checkbox" type="checkbox">
 									<img class="check-img" src="assets/img/d.png"></span>
-							<span class="span2">
+				<span class="span2">
 									<img src="assets/img/title.jpg"></span>
-							<span class="span3">
+				<span class="span3">
 									<p class="text-title">《触摸春天》生字学习</p>
 									<p class="text-size">大小：10M</p>
 								</span>
-							<span class="span4">
+				<span class="span4">
 									<!-- <img src="assets/img/c1.png">
 									<img src="assets/img/c2.png">
 									<img src="assets/img/c3.png">--></span>
-							<span class="span5">
+				<span class="span5">
 									<p>类型:<a>动画</a></p>
 									<p>
 										<img src="assets/img/s-y.png"/>
@@ -155,22 +142,22 @@
 									</p> 
 									<p>于2015/12/14共享到校</p>
 								</span>
-						</li>
-						<li class="current-style">
-							<span class="span1">
+			</li>
+			<li class="current-style">
+				<span class="span1">
 									<input class="in-checkbox" type="checkbox">
 									<img class="check-img" src="assets/img/d.png"></span>
-							<span class="span2">
+				<span class="span2">
 									<img src="assets/img/title.jpg"></span>
-							<span class="span3">
+				<span class="span3">
 									<p class="text-title">《触摸春天》生字学习</p>
 									<p class="text-size">大小：10M</p>
 								</span>
-							<span class="span4">
+				<span class="span4">
 									<!-- <img src="assets/img/c1.png">
 									<img src="assets/img/c2.png">
 									<img src="assets/img/c3.png">--></span>
-							<span class="span5">
+				<span class="span5">
 									<p>类型:<a>动画</a></p>
 									<p>
 										<img src="assets/img/s-y.png"/>
@@ -181,189 +168,189 @@
 									</p> 
 									<p>于2015/12/14共享到校</p>
 								</span>
-						</li>
+			</li>
 
-						<div class="page">
-							<img src="assets/img/l1.png">
-							<a class="a-checked">1</a>
-							<a>2</a> <i>...</i>
-							<a>5</a>
-							<img src="assets/img/r1.png" />
-							<a class="go-style">GO</a>
-							<input type="text" />
-							<a class="go">转到</a>
-						</div>
-					</ul>
-				</div>
-				<div class="res-r-main-s">
-					<div class="li-s">
-						<img class="li-img" src="assets/img/title.jpg" />
-						<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-						<div class="s-left">
-							<p>多媒体教辅</p>
-							<p>大小：<a>4.1M</a></p>
-							<p><a class="s-left-num">210</a>浏览/<a class="q-c">5</a>下载/<a class="s-left-num">20</a>收藏</p>
-						</div>
-						<div class="i-right">
-							<p class="i-right-1">
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-							</p>
-							<p class="i-right-2">
-								<img class="res1" src="assets/img/t1.png" />
-								<img class="res2" src="assets/img/c2.png" />
-							</p>
-						</div>
-					</div>
-					<div class="li-s">
-						<img class="li-img" src="assets/img/title.jpg" />
-						<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-						<div class="s-left">
-							<p>多媒体教辅</p>
-							<p>大小：<a>4.1M</a></p>
-							<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-						</div>
-						<div class="i-right">
-							<p class="i-right-1">
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-							</p>
-							<p class="i-right-2">
-								<img class="res1" src="assets/img/t1.png" />
-								<img class="res2" src="assets/img/c2.png" />
-							</p>
-						</div>
-					</div>
-					<div class="li-s">
-						<img class="li-img" src="assets/img/title.jpg" />
-						<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-						<div class="s-left">
-							<p>多媒体教辅</p>
-							<p>大小：<a>4.1M</a></p>
-							<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-						</div>
-						<div class="i-right">
-							<p class="i-right-1">
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
+			<div class="page">
+				<img src="assets/img/l1.png">
+				<a class="a-checked">1</a>
+				<a>2</a> <i>...</i>
+				<a>5</a>
+				<img src="assets/img/r1.png" />
+				<a class="go-style">GO</a>
+				<input type="text" />
+				<a class="go">转到</a>
+			</div>
+		</ul>
+	</div>
+	<div class="res-r-main-s">
+		<div class="li-s">
+			<img class="li-img" src="assets/img/title.jpg" />
+			<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
+			<div class="s-left">
+				<p>多媒体教辅</p>
+				<p>大小：<a>4.1M</a></p>
+				<p><a class="s-left-num">210</a>浏览/<a class="q-c">5</a>下载/<a class="s-left-num">20</a>收藏</p>
+			</div>
+			<div class="i-right">
+				<p class="i-right-1">
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+				</p>
+				<p class="i-right-2">
+					<img class="res1" src="assets/img/t1.png" />
+					<img class="res2" src="assets/img/c2.png" />
+				</p>
+			</div>
+		</div>
+		<div class="li-s">
+			<img class="li-img" src="assets/img/title.jpg" />
+			<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
+			<div class="s-left">
+				<p>多媒体教辅</p>
+				<p>大小：<a>4.1M</a></p>
+				<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
+			</div>
+			<div class="i-right">
+				<p class="i-right-1">
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+				</p>
+				<p class="i-right-2">
+					<img class="res1" src="assets/img/t1.png" />
+					<img class="res2" src="assets/img/c2.png" />
+				</p>
+			</div>
+		</div>
+		<div class="li-s">
+			<img class="li-img" src="assets/img/title.jpg" />
+			<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
+			<div class="s-left">
+				<p>多媒体教辅</p>
+				<p>大小：<a>4.1M</a></p>
+				<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
+			</div>
+			<div class="i-right">
+				<p class="i-right-1">
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
 
-							</p>
-							<p class="i-right-2">
-								<img class="res1" src="assets/img/t1.png" />
-								<img class="res2" src="assets/img/c2.png" />
-							</p>
-						</div>
-					</div>
-					<div class="li-s">
-						<img class="li-img" src="assets/img/title.jpg" />
-						<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-						<div class="s-left">
-							<p>多媒体教辅</p>
-							<p>大小：<a>4.1M</a></p>
-							<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-						</div>
-						<div class="i-right">
-							<p class="i-right-1">
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-							</p>
-							<p class="i-right-2">
-								<img class="res1" src="assets/img/t1.png" />
-								<img class="res2" src="assets/img/c2.png" />
-							</p>
-						</div>
-					</div>
-					<div class="li-s">
-						<img class="li-img" src="assets/img/title.jpg" />
-						<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-						<div class="s-left">
-							<p>多媒体教辅</p>
-							<p>大小：<a>4.1M</a></p>
-							<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-						</div>
-						<div class="i-right">
-							<p class="i-right-1">
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-							</p>
-							<p class="i-right-2">
-								<img class="res1" src="assets/img/t1.png" />
-								<img class="res2" src="assets/img/c2.png" />
-							</p>
-						</div>
-					</div>
-					<div class="li-s">
-						<img class="li-img" src="assets/img/title.jpg" />
-						<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-						<div class="s-left">
-							<p>多媒体教辅</p>
-							<p>大小：<a>4.1M</a></p>
-							<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-						</div>
-						<div class="i-right">
-							<p class="i-right-1">
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-							</p>
-							<p class="i-right-2">
-								<img class="res1" src="assets/img/t1.png" />
-								<img class="res2" src="assets/img/c2.png" />
-							</p>
-						</div>
-					</div>
-					<div class="li-s">
-						<img class="li-img" src="assets/img/title.jpg" />
-						<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-						<div class="s-left">
-							<p>多媒体教辅</p>
-							<p>大小：<a>4.1M</a></p>
-							<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-						</div>
-						<div class="i-right">
-							<p class="i-right-1">
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-								<img src="assets/img/s-y.png" />
-							</p>
-							<p class="i-right-2">
-								<img class="res1" src="assets/img/t1.png" />
-								<img class="res2" src="assets/img/c2.png" />
-							</p>
-						</div>
-					</div>
-				</div>
+				</p>
+				<p class="i-right-2">
+					<img class="res1" src="assets/img/t1.png" />
+					<img class="res2" src="assets/img/c2.png" />
+				</p>
 			</div>
-			<div class="res-r-hide">b
+		</div>
+		<div class="li-s">
+			<img class="li-img" src="assets/img/title.jpg" />
+			<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
+			<div class="s-left">
+				<p>多媒体教辅</p>
+				<p>大小：<a>4.1M</a></p>
+				<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
 			</div>
-			<div class="res-r-hide">c
+			<div class="i-right">
+				<p class="i-right-1">
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+				</p>
+				<p class="i-right-2">
+					<img class="res1" src="assets/img/t1.png" />
+					<img class="res2" src="assets/img/c2.png" />
+				</p>
 			</div>
-			<div class="res-r-hide">d
+		</div>
+		<div class="li-s">
+			<img class="li-img" src="assets/img/title.jpg" />
+			<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
+			<div class="s-left">
+				<p>多媒体教辅</p>
+				<p>大小：<a>4.1M</a></p>
+				<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
 			</div>
-			<div class="res-r-hide">e
+			<div class="i-right">
+				<p class="i-right-1">
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+				</p>
+				<p class="i-right-2">
+					<img class="res1" src="assets/img/t1.png" />
+					<img class="res2" src="assets/img/c2.png" />
+				</p>
 			</div>
-			<div class="res-r-hide">g
+		</div>
+		<div class="li-s">
+			<img class="li-img" src="assets/img/title.jpg" />
+			<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
+			<div class="s-left">
+				<p>多媒体教辅</p>
+				<p>大小：<a>4.1M</a></p>
+				<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
 			</div>
-			<div class="res-r-hide">h
+			<div class="i-right">
+				<p class="i-right-1">
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+				</p>
+				<p class="i-right-2">
+					<img class="res1" src="assets/img/t1.png" />
+					<img class="res2" src="assets/img/c2.png" />
+				</p>
 			</div>
-			<div class="res-r-hide">i
+		</div>
+		<div class="li-s">
+			<img class="li-img" src="assets/img/title.jpg" />
+			<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
+			<div class="s-left">
+				<p>多媒体教辅</p>
+				<p>大小：<a>4.1M</a></p>
+				<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
+			</div>
+			<div class="i-right">
+				<p class="i-right-1">
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+					<img src="assets/img/s-y.png" />
+				</p>
+				<p class="i-right-2">
+					<img class="res1" src="assets/img/t1.png" />
+					<img class="res2" src="assets/img/c2.png" />
+				</p>
 			</div>
 		</div>
 	</div>
+</div>
+<div class="res-r-hide">b
+</div>
+<div class="res-r-hide">c
+</div>
+<div class="res-r-hide">d
+</div>
+<div class="res-r-hide">e
+</div>
+<div class="res-r-hide">g
+</div>
+<div class="res-r-hide">h
+</div>
+<div class="res-r-hide">i
+</div>
+</div>
+</div>
 </div>
