--- a/src/coms/system-res/views/sysres-header.html
+++ b/src/coms/system-res/views/sysres-header.html
@@ -1,5 +1,5 @@
 <!--系统资源页头部-->
-<div class="res-header container">
+<div class="res-header">
 	<!-- 选择 导航 展示-->
 	<label>您已选择：</label>
 	<select class="res-select-grade">
@@ -25,59 +25,51 @@
 </div>
 
 <!--筛选主内容 -->
-<div class="res-rbody container">
-	<div class="res-school">
-		<span class="res-school-phase">学段:</span>
-		<span class="res-school-phase-sort">
-		   	<a>小学</a>
-		   	<a>初中</a>
-		   	<a>高中</a>
+<div class="res-navbody">
+	<div class="res-body-content res-grade">
+		<span class="res-content-left">学段:</span>
+		<span class="select-item res-grade-content">小学</span>
+		<span class="select-item res-grade-content">初中</span>
+		<span class="select-item res-grade-content">高中</span>
+	</div>
+	<div class="res-body-content res-subject">
+		<div class="res-content-left">学科:</div>
+		<div class="res-subject-wrapper"> 
+			<span class="select-item res-subject-content">语文</span>
+			<span class="select-item res-subject-content">数学</span>
+			<span class="select-item res-subject-content">英语</span>
+			<span class="select-item res-subject-content">物理</span>
+			<span class="select-item res-subject-content">化学</span>
+			<span class="select-item res-subject-content">地理</span>
+			<span class="select-item res-subject-content">历史</span>
+			<span class="select-item res-subject-content">政治</span>
+			<span class="select-item res-subject-content">政治</span>
+			<span class="select-item res-subject-content">政治</span>
+			<span class="select-item res-subject-content">政治</span>
+			<span class="select-item res-subject-content">政治</span>
+			<span class="select-item res-subject-content">政治</span>
+			<span class="select-item res-subject-content">政治</span>
+			<span class="select-item res-subject-content">政治</span>
+			<span class="select-item res-subject-content">政治</span>
+			<span class="select-item res-subject-content">政治</span>
+			<span class="select-item res-subject-content">政治</span>
+			<span class="select-item res-subject-content">政治</span>
+		</div>
+		<span class="res-more">
+		   	<a>更多<i class="icon-angle-down"></i></a>
 		</span>
 	</div>
-	<div class="res-school">
-		<span class="res-school-phase">学科:</span>
-		<span class="res-school-phase-sort1">
-		   	   	   	<a>语文</a>
-		   	   	   	<a>数学</a>
-		   	   	   	<a>英语</a>
-		   	   	   	<a>a</a>
-		   	   	   	<a>b</a>
-		   	   	   	<a>c</a>
-		   	   	   	<a>d</a>
-		   	   	   	<a>e</a>
-		   	   	   	<a>f</a>
-		   	   	   	<a>g</a>
-		   	   	   	<a>h</a>
-		   	   	   
-		   	   	   </span>
-		<span class="res-school-phase-more">
-		   	   	   	<a>更多</a>
-		   	   	   	<img src="assets/img/b-a.png"/>
-		   	   	   </span>
-		<div class="res-school-phase-sort2">
-			<a>i</a>
-			<a>j</a>
-			<a>k</a>
-			<a>l</a>
-			<a>m</a>
-			<a>n</a>
-			<a>o</a>
-			<a>p</a>
-			<a>q</a>
-			<a>r</a>
-			<a>s</a>
-		</div>
+	<div class="res-body-content res-material-version">
+		<div class="res-content-left">版本:</div>
+		<span class="select-item res-material-content">北师大版本</span>
+		<span class="select-item res-material-content">人教版</span>
+		<span class="select-item res-material-content">鲁教版</span>
+		<span class="select-item res-material-content">苏科版</span>
+		<span class="select-item res-material-content">粤教版</span>
+		<span class="select-item res-material-content">华东师大版本</span>
 	</div>
-	<div class="res-school">
-		<span class="res-school-phase">版本:</span>
-		<span class="res-school-phase-sort3">
-		   	   	   	<a>北师大版本</a>
-		   	   	   	<a>人教版</a>
-		   	   	   	<a>鲁教版</a>
-		   	   	   	<a>苏科版</a>
-		   	   	   	<a>粤教版</a>
-		   	   	   	<a>华东师大版本</a>
-		   	   	   </span>
+	<div class="res-content-footer">
+		<img src="assets/images/res-nav-footer.png">
+		<div></div>
 	</div>
-</div>
 </div>
