--- a/src/coms/system-res/views/systemres.html
+++ b/src/coms/system-res/views/systemres.html
@@ -3,7 +3,7 @@
 	<div data-ng-include="'/coms/system-res/views/sysres-header.html'"></div>
 	
 	<!--左侧目录-->
-	<div class="catalog">
+	<div class="col-md-3 catalog">
 		<div class="catalog-header"></div>
 		<div class="catalog-content">
 			<div class="catalog-tip"><img src="assets/images/catalog/catalog-tip.png"></div>
@@ -12,5 +12,5 @@
 		
 	</div>
 	<!--右侧资源列表-->
-	<div class="col-md-8 res-content" data-ng-include="'/coms/system-res/views/sysres-content.html'"></div>
+	<div class="col-md-9" data-ng-include="'/coms/system-res/views/sysres-content.html'"></div>
 </div>
